chore: added likes and comments functionalities
