# family-hearth-api/src/main/java/com/familyhearth/comments/dto/CreateCommentRequest.java
@@ -1,0 +1,8 @@
+package com.familyhearth.comments.dto;
+
+import lombok.Data;
+
+@Data
+public class CreateCommentRequest {
+    private String content;
+}
