# family-hearth-api/src/main/java/com/familyhearth/posts/dto/PostDto.java
@@ -9,9 +9,12 @@ import java.util.Map;
 @Data
 public class PostDto {
     private Long id;
-    private Long authorId;
+    private AuthorDto author;
     private String type;
     private Map<String, Object> contentJson;
     private List<MediaDto> media;
     private OffsetDateTime createdAt;
+    private long likeCount;
+    private long commentCount;
+    private boolean isLiked;
 }
