# family-hearth-api/src/main/java/com/familyhearth/posts/model/PostLikeId.java
@@ -1,0 +1,17 @@
+package com.familyhearth.posts.model;
+
+import jakarta.persistence.Embeddable;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.io.Serializable;
+
+@Embeddable
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+public class PostLikeId implements Serializable {
+    private Long postId;
+    private Long userId;
+}
